# TyX

./: .gitignore  .prettierignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  bun.lockb  eslint.config.mjs  index.html  main.py  mkdocs.yml  package-lock.json  package.json  tsconfig.json  utilities.ipynb  vite.config.ts  vitest.config.ts  wdio.conf.ts
.github/: FUNDING.yml
.github/workflows/: lint.yml  publish.yml  test.yml
crates/typst-to-tyx/: Cargo.toml
crates/typst-to-tyx/src/: lib.rs
crates/tyx-converters/: Cargo.toml  README.md
crates/tyx-converters-wasm/: Cargo.toml  README.md
crates/tyx-converters-wasm/src/: lib.rs
crates/tyx-converters/src/: common.rs  lib.rs  tests.rs  typst_to_tyx.rs  tyx_to_typst.rs
crates/tyx-converters/src/fixtures/integration/: formatted-text.typ  heading.typ  list.typ  math.typ
crates/tyx-converters/src/fixtures/integration/snaps/: convert@base.typ.snap  convert@formatted-text.typ.snap  convert@heading.typ.snap  convert@link.typ.snap  convert@list.typ.snap  convert@math.typ.snap
crates/tyx-edit/: Cargo.toml
crates/tyx-edit/src/: html.rs  lib.rs  tests.rs
crates/tyx-edit/src/fixtures/integration/: base.typ  equation.typ
crates/tyx-edit/src/fixtures/integration/snaps/: jumps@base.typ.snap  jumps@equation.typ.snap  preview@base.typ.snap  preview@equation.typ.snap
crates/tyx-import-typst/: Cargo.toml
crates/tyx-import-typst/src/: lib.rs
crates/tyx-schema/: Cargo.toml  README.md  build.rs
crates/tyx-schema/src/: document.rs  generate.rs  generated.rs  lib.rs  settings.rs
crates/tyx-tiptap-schema/: Cargo.toml  README.md  build.rs
crates/tyx-tiptap-schema/assets/: tyx.schema.json
crates/tyx-tiptap-schema/src/: generate.rs  lib.rs
crates/tyx-tiptap-schema/src/schema/: mark.rs  mod.rs  node.rs  prelude.rs
crates/tyx-tiptap-typst/: Cargo.toml  README.md
crates/tyx-tiptap-typst/src/: concrete.rs  instr-header.typ  lib.rs  syntax.rs  tests.rs
crates/tyx-tiptap-typst/src/fixtures/instrument/: code.typ  func.typ  import.typ
crates/tyx-tiptap-typst/src/fixtures/instrument/snaps/: instrument@base.typ.snap  instrument@code.typ.snap  instrument@func.typ.snap  instrument@import.typ.snap  instrument@link.typ.snap  tree@base.typ.snap  tree@code.typ.snap  tree@func.typ.snap  tree@import.typ.snap  tree@link.typ.snap
crates/tyx-tiptap-typst/src/fixtures/integration/snaps/: convert@base.typ.snap  convert@enum.typ.snap  convert@enum2.typ.snap  convert@figure_caption.typ.snap  convert@figure_image.typ.snap  convert@figure_image_alt.typ.snap  convert@image.typ.snap  convert@image_alt.typ.snap  convert@link.typ.snap  convert@link2.typ.snap  convert@link3.typ.snap  convert@list.typ.snap  convert@math_block.typ.snap  convert@math_block2.typ.snap  convert@math_inline.typ.snap  convert@outline.typ.snap  convert@raw_inline.typ.snap  convert@table.typ.snap
crates/tyx-to-typst/: Cargo.toml
crates/tyx-to-typst/src/: lib.rs
crates/tyx-version/: Cargo.toml  build.rs
crates/tyx-version/src/: lib.rs
docs/: commands.md  commands.rst  conf.py  configuration.md  document-settings.md  document-settings.rst  file-format.md  file-format.rst  getting-started.md  getting-started.rst  index.md  index.rst  pyproject.toml  requirements.txt  settings.md  settings.rst
examples/: Showcase.tyx
python/: pyproject.toml
python/src/tyx_schema/: __init__.py  document.py  schema.py  settings.py
python/tests/: test_examples.py
schemas/: tyx-document.schema.json  tyx-settings.schema.json  tyx.schema.json
scripts/: create-json-schemas.ts  download.ts  get-commands.ts  get-current-changelog.ts  get-schema.ts  schema.json
src/: App.tsx  EqPoC.tsx  backend.ts  commands.test.ts  commands.ts  config.ts  format.ts  functions.ts  hooks.ts  i18n.ts  index.css  keyboardShortcuts.ts  main.tsx  models.ts  settings.ts  shortcuts.test.ts  shortcuts.ts  state.ts  test-setup.ts  utilities.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  relic.conf  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  cmds.rs  lib.rs  main-changed.typ  main.rs  main.typ  pdf.rs  utils.rs  version.rs
src/backend/: base.ts  common.ts  index.ts  shared.ts  tauri.ts  web.ts  web.tsx
src/compilers/: lexical2typst.ts  mathjson2typst.ts  tiptap2typst.ts  tyx2typst.ts  tyxValue2typst.ts
src/compilers/asciimath2typst/: README.md  codegen.ts  index.ts  parser.ts  symbols.ts  trie.ts
src/components/: CommandActionIcon.tsx  CommandButton.tsx  CommandMenuItem.tsx  DocumentSettingsModal.tsx  DocumentTabs.tsx  Editor.tsx  KeyboardShortcutEditor.tsx  LengthInput.tsx  MathControls.tsx  MathEditorExtension.tsx  MathInlineShortcutEditor.tsx  SaveAsModal.tsx  SettingsModal.tsx  ShortcutEditor.tsx  StatusBar.tsx  TyXContentEditor.tsx  TyXLengthEditor.test.tsx  TyXLengthEditor.tsx  TyXValueEditor.test.tsx  TyXValueEditor.tsx  UpdateChecker.tsx  WelcomeScreen.tsx
src/components/editor/: KeyboardMapExtension.ts  MathEditor.tsx  MathEditorExtension.ts  MathEditorExtension.tsx  TypstCodeExtension.ts  TypstCodeExtension.tsx  extensions.ts
src/components/plugins/: CodeHighlightPlugin.tsx  CurrentEditorPlugin.tsx  FunctionCallPlugin.tsx  ImagePlugin.tsx  KeyboardMapPlugin.tsx  MathPlugin.tsx  NestedEditorPlugin.tsx  PageBreakPlugin.tsx  RTLPlugin.tsx  RemoveDefaultShortcutsPlugin.tsx  TableCommandsPlugin.tsx  ToolbarPlugin.tsx  TyXCommandsPlugin.tsx  TypstCodePlugin.tsx  functionCall.ts  (+9 more)
src/editor/: FunctionCallExtension.ts  FunctionCallNode.tsx  KeyboardMapExtension.ts  MathEditor.tsx  MathEditorExtension.ts  TypstCodeExtension.ts  extensions.ts
src/mocks/: converters.ts
src/models/: content.test.ts  content.ts  document.test.ts  document.ts  functions.test.ts  functions.ts  index.ts  settings.ts  values.test.ts  values.ts
src/resources/: playground-ext.tsx  playground.ts  prism-theme.css
src/translations/: en.json  he.json  index.ts
src/utilities/: hooks.test.ts  hooks.ts  index.tsx
test/specs/: document.e2e.ts  splash.e2e.ts
