[workspace.package]
description = "A Tauri App"
authors = ["Noam Zaks", "Myriad-Dreamin", "TyX Developers"]
version = "0.1.0"
rust-version = "1.85.0"                                     # MSRV
edition = "2024"
readme = "README.md"
license = "MIT"
homepage = "https://tyx-editor.com/"
repository = "https://github.com/tyx-editor/TyX"


[workspace]
resolver = "2"
members = ["crates/*", "src-tauri"]

[profile.release]
codegen-units = 1 # Reduce number of codegen units to increase optimizations
opt-level = 3
panic = "abort"   # Abort on panic

[workspace.dependencies]

cmark-writer = { version = "0.6.3", features = ["gfm"] }
ecow = { version = "0.2", features = ["serde"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

insta = "1"

tyx-edit = { path = "crates/tyx-edit", version = "0.1.0" }
tyx-tiptap-schema = { path = "crates/tyx-tiptap-schema", version = "0.1.0" }
tyx-tiptap-typst = { path = "crates/tyx-tiptap-typst", version = "0.1.0" }

tinymist-project = "0.13.12"
tinymist-std = "0.13.12"
tinymist-task = "0.13.12"
tinymist-tests = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "38974a3b5e43837c1982c707465abfb27d233302" }
tinymist-vfs = "0.13.12"
tinymist-world = "0.13.12"
tinymist-query = "0.13.12"
typst = "0.13.1"
typst-library = "0.13.1"
typst-html = "0.13.1"
typst-svg = "0.13.1"
typlite = "0.13.12"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"

[workspace.lints.rust]
missing_docs = "warn"

unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(wasm_bindgen_unstable_test_coverage)',
    'cfg(noop)',
    'cfg(used_linker)',
] }

[workspace.lints.clippy]
uninlined_format_args = "warn"
missing_safety_doc = "warn"
undocumented_unsafe_blocks = "warn"

[workspace.metadata.typos.default]
locale = "en-us"

[workspace.metadata.typos.default.extend-words]
labelled = "labelled"
onces = "onces"
withs = "withs"

[workspace.metadata.typos.files]
ignore-hidden = false
extend-exclude = ["/.git", "fixtures"]

[patch.crates-io]

# todo: remove these typst patch?
# A regular build MUST use `tag` or `rev` to specify the version of the patched crate to ensure stability.
typst = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "tinymist/v0.13.10" }
typst-library = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "tinymist/v0.13.10" }
typst-html = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "tinymist/v0.13.10" }
typst-timing = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "tinymist/v0.13.10" }
typst-svg = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "tinymist/v0.13.10" }
typst-render = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "tinymist/v0.13.10" }
typst-pdf = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "tinymist/v0.13.10" }
typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "tinymist/v0.13.10" }
typst-eval = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "tinymist/v0.13.10" }
typst-macros = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "tinymist/v0.13.10" }

tinymist-project = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "38974a3b5e43837c1982c707465abfb27d233302" }
tinymist-std = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "38974a3b5e43837c1982c707465abfb27d233302" }
tinymist-task = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "38974a3b5e43837c1982c707465abfb27d233302" }
tinymist-vfs = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "38974a3b5e43837c1982c707465abfb27d233302" }
tinymist-world = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "38974a3b5e43837c1982c707465abfb27d233302" }
tinymist-query = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "38974a3b5e43837c1982c707465abfb27d233302" }
typlite = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "38974a3b5e43837c1982c707465abfb27d233302" }

# tinymist-project = { path = "../tinymist/crates/tinymist-project" }
# tinymist-std = { path = "../tinymist/crates/tinymist-std" }
# tinymist-task = { path = "../tinymist/crates/tinymist-task" }
# tinymist-tests = { path = "../tinymist/crates/tinymist-tests" }
# tinymist-vfs = { path = "../tinymist/crates/tinymist-vfs" }
# tinymist-world = { path = "../tinymist/crates/tinymist-world" }
# typlite = { path = "../tinymist/crates/typlite" }
