[workspace.package]
description = "A LyX-like experience for Typst"
authors = ["Noam Zaks", "Myriad-Dreamin", "TyX Developers"]
version = "0.1.0"
rust-version = "1.88.0"
edition = "2024"
readme = "README.md"
license = "MIT"
homepage = "https://tyx-editor.com/"
repository = "https://github.com/tyx-editor/TyX"

[workspace]
resolver = "2"
members = ["crates/*", "src-tauri"]

[profile.release]
codegen-units = 1
opt-level = 3
panic = "abort"

[workspace.dependencies]
cmark-writer = { version = "0.9.0", features = ["gfm"] }
ecow = { version = "0.2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
insta = "1"
tyx-schema = { path = "crates/tyx-schema", version = "0.1.0" }
tyx-converters = { path = "crates/tyx-converters", version = "0.1.0" }
tyx-to-typst = { path = "crates/tyx-to-typst", version = "0.1.0" }
typst-to-tyx = { path = "crates/typst-to-tyx", version = "0.1.0" }
tinymist-project = { version = "0.14.0", features = ["no-content-hint"] }
tinymist-std = "0.14.0"
tinymist-task = { version = "0.14.0", features = ["no-content-hint"] }
tinymist-tests = { git = "https://github.com/Myriad-Dreamin/tinymist.git", tag = "v0.14.0" }
tinymist-vfs = "0.14.0"
tinymist-world = "0.14.0"
typst = "0.14.0"
typst-pdf = "0.14.0"
typlite = { version = "0.14.0", features = ["no-content-hint"] }

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"

[workspace.lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(wasm_bindgen_unstable_test_coverage)',
    'cfg(noop)',
    'cfg(used_linker)',
] }

[workspace.lints.clippy]
uninlined_format_args = "warn"
missing_safety_doc = "warn"
undocumented_unsafe_blocks = "warn"

[workspace.metadata.typos.default]
locale = "en-us"

[workspace.metadata.typos.default.extend-words]
labelled = "labelled"
onces = "onces"
withs = "withs"

[workspace.metadata.typos.files]
ignore-hidden = false
extend-exclude = ["/.git", "fixtures"]

[patch.crates-io]
# todo: remove these typst patch?
# A regular build MUST use `tag` or `rev` to specify the version of the patched crate to ensure stability.
typst = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "tinymist/v0.14.0-rc1" }
typst-library = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "tinymist/v0.14.0-rc1" }
typst-html = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "tinymist/v0.14.0-rc1" }
typst-timing = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "tinymist/v0.14.0-rc1" }
typst-svg = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "tinymist/v0.14.0-rc1" }
typst-render = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "tinymist/v0.14.0-rc1" }
typst-pdf = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "tinymist/v0.14.0-rc1" }
typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "tinymist/v0.14.0-rc1" }
typst-eval = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "tinymist/v0.14.0-rc1" }
