[package]
name = "tyx"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tyx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tinymist-project = { workspace = true, features = ["lsp", "no-content-hint"] }
typst.workspace = true
typst-pdf.workspace = true
tyx-schema.workspace = true
tyx-converters.workspace = true
tyx-version.workspace = true
directories = "6.0.0"
typstyle-core = "0.13.14"
url = "2.5.4"
open = "5"
base64 = "0.22"
dunce = "1.0.5"
clap = "4.5.53"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
