[package]
name = "typst-to-tyx"
description = "Converts Typst to Tyx."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
cmark-writer.workspace = true
ecow.workspace = true
serde.workspace = true
serde_json.workspace = true
tinymist-project = { workspace = true, features = ["lsp"] }
typlite.workspace = true
typst.workspace = true
tyx-schema.workspace = true
tyx-version.workspace = true

[build-dependencies]
serde.workspace = true
serde_json.workspace = true


[lints]
workspace = true
