[package]
name = "tyx-converters-wasm"
description = "WASM bindings for converters between TyX and other formats."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
tyx-to-typst.workspace = true

[lib]
crate-type = ["cdylib"]
