[package]
name = "tyx-converters"
description = "Converters between TyX and other formats."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tyx-to-typst.workspace = true
typst-to-tyx.workspace = true

[dev-dependencies]
insta.workspace = true
tinymist-tests.workspace = true
tinymist-project.workspace = true
serde.workspace = true
serde_json.workspace = true
tyx-schema.workspace = true

[lints]
workspace = true
