[package]
name = "tyx-schema"
description = "The strong-typed JSON schema for TyX."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ecow.workspace = true
serde.workspace = true
serde_json.workspace = true
typst.workspace = true

[build-dependencies]
serde.workspace = true
serde_json.workspace = true
schemafy_lib = "0.6.0"
rustfmt-wrapper = "0.2.1"

[lints]
workspace = true
