[package]
name = "tyx-schema"
description = "The strong-typed JSON schema for TyX."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ecow.workspace = true
serde.workspace = true
serde_json.workspace = true
typst.workspace = true

[build-dependencies]
serde.workspace = true
serde_json.workspace = true
prettyplease = "0.2"
schemars = "0.8"
syn = "2.0"
typify = "0.5.0"

[lints]
workspace = true
