[package]
name = "tyx-tiptap-typst"
description = "This crates provides a converter from typst to tiptap."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
cmark-writer.workspace = true
ecow.workspace = true
serde.workspace = true
serde_json.workspace = true
tinymist-project = { workspace = true, features = ["lsp"] }
typlite.workspace = true
typst.workspace = true
tyx-tiptap-schema.workspace = true

[dev-dependencies]
insta.workspace = true
tinymist-tests.workspace = true

[build-dependencies]
serde.workspace = true
serde_json.workspace = true


[lints]
workspace = true
