[package]
name = "tyx-to-typst"
description = "Converts TyX to Typst."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tyx-schema.workspace = true
regex = { version = "1.12.2" }

[lints]
workspace = true
